the train runs but the loss is fjwieofoei

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -19,7 +19,7 @@ training:
   ema: 0.9999
 
 data:
-  train: openwebtext
+  train: sagawa/pubchem-10m-canonicalized
   valid: wikitext103
   cache_dir: data
 
